--- a/src/App.css
+++ b/src/App.css
@@ -44,7 +44,7 @@
   padding: 10px 20px;
   gap: 40px;
   min-height: 70px;
-  background-color: aliceblue;
+  background-color: rgb(185, 213, 150);
   z-index: 1;
   /* box-sizing: border-box; */
 }
@@ -66,7 +66,7 @@
 .navMenuText {
   display: block;
   position: relative;
-  color: black;
+  color: rgb(11, 10, 10);
   text-decoration: none;
   border-radius: 5px;
   transition-duration: 0.2s;
@@ -78,7 +78,7 @@
 }
 
 .canvas {
-  background-color: rgb(116, 179, 175);
+  /* background-color: rgb(116, 179, 175); */
 }
 
 /* These CSS styles only apply to small screens */
@@ -130,6 +130,7 @@
   }
 }
 
+/* About section */
 .section-header {
   text-align: center;
   padding: 10px 0px 20px 0px;
@@ -137,7 +138,7 @@
 }
 
 .about-section {
-  background-color: rgb(150, 181, 194);
+  /* background-color: rgb(150, 181, 194); */
 }
 
 /* Info Section Styles */
@@ -185,7 +186,7 @@
 /* Coach Section Styles */
 
 .coaches-section {
-  background-color: #61dafb;
+  /* background-color: #61dafb; */
 }
 
 .coaches-card-section {
@@ -208,4 +209,22 @@
     margin: 0 auto;
     align-items: center;
   }
+}
+
+/* Gallery content */
+.gallery-section {
+
+}
+
+.gallery-carousel {
+  
+}
+
+.gallery-item {
+  text-align: center;
+}
+
+.gallery-image {
+  height: 70vh;
+  width: auto;
 }
