--- a/src/App.css
+++ b/src/App.css
@@ -130,13 +130,21 @@
   }
 }
 
-/* About section */
 .section-header {
   text-align: center;
   padding: 10px 0px 20px 0px;
   font-weight: 10;
 }
 
+.subsection-header {
+  font-weight: 2;
+}
+
+.subsection-text {
+
+}
+
+/* About section */
 .about-section {
   /* background-color: rgb(150, 181, 194); */
 }
@@ -153,7 +161,7 @@
 }
 
 .info-section-header {
-  
+ 
 }
 
 .info-section-text {
@@ -227,4 +235,34 @@
 .gallery-image {
   height: 70vh;
   width: auto;
+}
+
+/* Services content  */
+.services-section {
+   /* border-top: 1px solid rgb(54, 53, 53);
+   border-bottom: 1px solid rgb(54, 53, 53) ; */
+   display: flex;
+   flex-direction: column;
+   gap: 60px;
+}
+.service-container {
+
+}
+
+.service-container-title {
+  text-align: center;
+  margin-bottom: 10px;
+}
+
+.service-container-text {
+  text-align: center;
+  margin: 0px;
+}
+
+.divider {
+  height: 2px;
+  max-width: 400px;
+  width: 60vw;
+  background-color: rgb(54, 53, 53);
+  margin: 0 auto;
 }
