--- a/src/App.css
+++ b/src/App.css
@@ -343,3 +343,40 @@
     flex-direction: column;
   }
 }
+
+/* Goals Content */
+.goals-section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
+}
+
+.goal-container {
+  display: flex;
+  flex-direction: row;
+  /* align-items: center; */
+}
+
+.goal-number {
+  display: flex;
+  min-width: 40px;
+  min-height: 40px;
+  max-width: 40px;
+  max-height: 40px;
+  background-color: rgb(80, 194, 145);
+  color: white;
+  font-size: 20px;
+  border-radius: 50%;
+  text-align: center;
+  justify-content: center;
+  align-items: center;
+  text-emphasis: 20px;
+  margin: 5px;
+}
+
+.goal-text {
+  display: flex;
+  align-items: center;
+  margin-left: 10px;
+}
