--- a/src/App.css
+++ b/src/App.css
@@ -45,7 +45,7 @@
   gap: 40px;
   min-height: 70px;
   background-color: rgb(185, 213, 150);
-  z-index: 1;
+  z-index: 1000;
   /* box-sizing: border-box; */
 }
 
@@ -75,6 +75,17 @@
 .navMenuText:hover {
   text-shadow: 0 0 0.65px #222222, 0 0 0.65px #222222;
   transition-duration: 0.2s;
+}
+
+.sticky {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 9999;
+}
+
+.sticky + .content {
+  padding-top: 60px;
 }
 
 .canvas {
@@ -128,6 +139,10 @@
   .navMenu li {
     margin: 16px 0;
   }
+}
+
+.section-container {
+  padding-top: 70px;
 }
 
 .section-header {
